--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -174,9 +174,12 @@
         <!-- Write a Review Section -->
         <div class="pt-2 mx-4">
           <h1 class="text-2xl font-bold">Write a Review</h1>
-          <div class="px-4 my-2">
+          <div class="mx-4 my-2">
             <form id="new-review" method="POST" onsubmit="return false;">
-              <textarea class="w-full h-40"></textarea>
+              <textarea
+                id="review-text"
+                class="w-full h-40 px-1 rounded"
+              ></textarea>
               <span class="flex justify-end w-full">
                 <input
                   class="px-3 py-2 my-1"
