Add "Read Reviews" section

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -193,8 +193,91 @@
 
         <hr class="border-blue-300" />
         <!-- Read Reviews Section -->
-        <div>
-          <h1 class="mx-4 mt-2 text-2xl font-bold">Read Other Reviews</h1>
+        <div class="pt-2 mx-4">
+          <h1 class="text-2xl font-bold">Read Other Reviews</h1>
+          <!-- All Reviews container -->
+          <div
+            class="mx-4 my-2 bg-indigo-100 divide-y divide-indigo-300 rounded"
+          >
+            <div class="flex p-2 my-2">
+              <!-- Reviewer Info -->
+              <div class="mt-1 ml-2 mr-4 w-14 min-w-14 flex-0">
+                <a href="#">
+                  <img
+                    src="https://source.unsplash.com/random/420x420"
+                    class="w-full rounded-full"
+                  />
+                  <p class="text-sm font-bold text-center">Dank Memer</p>
+                </a>
+              </div>
+              <!-- Review Body -->
+              <div class="flex flex-1">
+                <p class="self-center">First</p>
+              </div>
+            </div>
+            <!-- Single Review container -->
+            <div class="flex p-2 my-2">
+              <!-- Reviewer Info -->
+              <div class="mt-1 ml-2 mr-4 w-14 min-w-14 flex-0">
+                <a href="#">
+                  <img
+                    src="https://source.unsplash.com/random/400x400"
+                    class="w-full rounded-full"
+                  />
+                  <p class="text-sm font-bold text-center">Marcus Aurelius</p>
+                </a>
+              </div>
+              <!-- Review Body -->
+              <div class="flex flex-1">
+                <p class="self-center">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Facilisis magna etiam tempor orci eu lobortis elementum.
+                  Egestas dui id ornare arcu. Venenatis cras sed felis eget.
+                  Varius quam quisque id diam vel quam elementum pulvinar etiam.
+                  Diam vulputate ut pharetra sit. Vitae congue mauris rhoncus
+                  aenean vel. Eleifend donec pretium vulputate sapien nec
+                  sagittis aliquam malesuada. Eget mi proin sed libero enim sed.
+                  Cras fermentum odio eu feugiat pretium nibh ipsum. Tempor nec
+                  feugiat nisl pretium fusce id velit ut tortor. Quam nulla
+                  porttitor massa id neque aliquam. In hendrerit gravida rutrum
+                  quisque. Rhoncus aenean vel elit scelerisque mauris. Justo
+                  donec enim diam vulputate ut pharetra sit amet aliquam. Nibh
+                  venenatis cras sed felis eget velit. Integer eget aliquet nibh
+                  praesent tristique.
+                </p>
+              </div>
+            </div>
+            <!-- Single Review container -->
+            <div class="flex p-2 my-2">
+              <!-- Reviewer Info -->
+              <div class="mt-1 ml-2 mr-4 w-14 min-w-14 flex-0">
+                <a href="#">
+                  <img
+                    src="https://source.unsplash.com/random/410x410"
+                    class="w-full rounded-full"
+                  />
+                  <p class="text-sm font-bold text-center">Romulus Remus</p>
+                </a>
+              </div>
+              <!-- Review Body -->
+              <div class="flex flex-1">
+                <p class="self-center">
+                  Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Leo
+                  in vitae turpis massa sed elementum tempus egestas. Lectus sit
+                  amet est placerat in egestas erat imperdiet. Nibh tortor id
+                  aliquet lectus proin nibh nisl condimentum. Egestas egestas
+                  fringilla phasellus faucibus scelerisque eleifend donec
+                  pretium. Lobortis scelerisque fermentum dui faucibus. Metus
+                  dictum at tempor commodo ullamcorper a lacus vestibulum.
+                  Euismod elementum nisi quis eleifend quam adipiscing vitae.
+                  Porta non pulvinar neque laoreet suspendisse interdum
+                  consectetur libero id. Sagittis id consectetur purus ut
+                  faucibus pulvinar.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
