Adjust review margins

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -211,7 +211,7 @@
                 </a>
               </div>
               <!-- Review Body -->
-              <div class="flex flex-1">
+              <div class="flex flex-1 ml-2">
                 <p class="self-center">First</p>
               </div>
             </div>
@@ -228,7 +228,7 @@
                 </a>
               </div>
               <!-- Review Body -->
-              <div class="flex flex-1">
+              <div class="flex flex-1 ml-2">
                 <p class="self-center">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -261,7 +261,7 @@
                 </a>
               </div>
               <!-- Review Body -->
-              <div class="flex flex-1">
+              <div class="flex flex-1 ml-2">
                 <p class="self-center">
                   Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper. Leo
                   in vitae turpis massa sed elementum tempus egestas. Lectus sit
